# QtQuick2PluginExtensionSample

./: LICENSE  README.md
MyPlugin/: CMakeLists.txt  myitem.cpp  myitem.h  qmldir
MyPluginTest/: CMakeLists.txt  Main.qml  main.cpp
MyPluginTest/MyPlugin/: MyItemControls.qml  MyPlugin_qml_module_dir_map.qrc  qmldir
Release/MyPlugin/: MyPlugin.qmltypes  MyPluginplugin.lib
